# serializer version: 1
# name: TestPersonTrends.test_trends_people_endpoint_filters_search
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT source.actor_id AS actor_id,
         source.event_count AS event_count,
         source.matching_events AS matching_events,
         source.event_distinct_ids AS event_distinct_ids
  FROM
    (SELECT actor_id AS actor_id,
            count() AS event_count,
            groupUniqArray(distinct_id) AS event_distinct_ids,
            groupUniqArray(100)(tuple(timestamp, uuid, `$session_id`, `$window_id`)) AS matching_events,
            max(timestamp) AS last_seen,
            actor_id AS id
     FROM
       (SELECT if(not(empty(e__override.distinct_id)), e__override.person_id, e.person_id) AS actor_id,
               toTimeZone(e.timestamp, 'UTC') AS timestamp,
               e.uuid AS uuid,
               e.`$session_id` AS `$session_id`,
               e.`$window_id` AS `$window_id`,
               e.distinct_id AS distinct_id
        FROM events AS e
        LEFT OUTER JOIN
          (SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id,
                  person_distinct_id_overrides.distinct_id AS distinct_id
           FROM person_distinct_id_overrides
           WHERE equals(person_distinct_id_overrides.team_id, 99999)
           GROUP BY person_distinct_id_overrides.distinct_id
           HAVING equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0) SETTINGS optimize_aggregation_in_order=1) AS e__override ON equals(e.distinct_id, e__override.distinct_id)
        WHERE and(equals(e.team_id, 99999), greaterOrEquals(timestamp, toDateTime64('explicit_redacted_timestamp', 6, 'UTC')), lessOrEquals(timestamp, toDateTime64('explicit_redacted_timestamp', 6, 'UTC')), or(isNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(e.properties, 'key'), ''), 'null'), '^"|"$', '')), ifNull(equals(ifNull(nullIf(leftUTF8(toString(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(e.properties, 'key'), ''), 'null'), '^"|"$', '')), 400), ''), '$$_posthog_breakdown_null_$$'), '$$_posthog_breakdown_null_$$'), 0)), equals(e.event, '$pageview')))
     GROUP BY actor_id) AS source
  ORDER BY source.actor_id ASC
  LIMIT 101
  OFFSET 0 SETTINGS optimize_aggregation_in_order=1,
                    join_algorithm='auto',
                    readonly=2,
                    max_execution_time=60,
                    allow_experimental_object_type=1,
                    max_ast_elements=4000000,
                    max_expanded_ast_elements=4000000,
                    max_bytes_before_external_group_by=0,
                    transform_null_in=1,
                    optimize_min_equality_disjunction_chain_length=4294967295,
                    optimize_rewrite_aggregate_function_with_if=0,
                    optimize_min_inequality_conjunction_chain_length=4294967295,
                    allow_experimental_join_condition=1,
                    use_hive_partitioning=0
  '''
# ---
# name: TestPersonTrends.test_trends_people_endpoint_filters_search.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT source.actor_id AS actor_id,
         source.event_count AS event_count,
         source.matching_events AS matching_events,
         source.event_distinct_ids AS event_distinct_ids
  FROM
    (SELECT actor_id AS actor_id,
            count() AS event_count,
            groupUniqArray(distinct_id) AS event_distinct_ids,
            groupUniqArray(100)(tuple(timestamp, uuid, `$session_id`, `$window_id`)) AS matching_events,
            max(timestamp) AS last_seen,
            actor_id AS id
     FROM
       (SELECT if(not(empty(e__override.distinct_id)), e__override.person_id, e.person_id) AS actor_id,
               toTimeZone(e.timestamp, 'UTC') AS timestamp,
               e.uuid AS uuid,
               e.`$session_id` AS `$session_id`,
               e.`$window_id` AS `$window_id`,
               e.distinct_id AS distinct_id
        FROM events AS e
        LEFT OUTER JOIN
          (SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id,
                  person_distinct_id_overrides.distinct_id AS distinct_id
           FROM person_distinct_id_overrides
           WHERE equals(person_distinct_id_overrides.team_id, 99999)
           GROUP BY person_distinct_id_overrides.distinct_id
           HAVING equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0) SETTINGS optimize_aggregation_in_order=1) AS e__override ON equals(e.distinct_id, e__override.distinct_id)
        LEFT JOIN
          (SELECT person.id AS id,
                  replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, 'email'), ''), 'null'), '^"|"$', '') AS properties___email,
                  replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, 'name'), ''), 'null'), '^"|"$', '') AS properties___name
           FROM person
           WHERE and(equals(person.team_id, 99999), in(tuple(person.id, person.version),
                                                         (SELECT person.id AS id, max(person.version) AS version
                                                          FROM person
                                                          WHERE equals(person.team_id, 99999)
                                                          GROUP BY person.id
                                                          HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))))))) SETTINGS optimize_aggregation_in_order=1) AS e__person ON equals(if(not(empty(e__override.distinct_id)), e__override.person_id, e.person_id), e__person.id)
        WHERE and(equals(e.team_id, 99999), or(ifNull(ilike(toString(e__person.properties___email), '%ben%'), 0), ifNull(ilike(toString(e__person.properties___name), '%ben%'), 0), ifNull(ilike(toString(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(e.properties, 'distinct_id'), ''), 'null'), '^"|"$', '')), '%ben%'), 0)), greaterOrEquals(timestamp, toDateTime64('explicit_redacted_timestamp', 6, 'UTC')), lessOrEquals(timestamp, toDateTime64('explicit_redacted_timestamp', 6, 'UTC')), or(isNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(e.properties, 'key'), ''), 'null'), '^"|"$', '')), ifNull(equals(ifNull(nullIf(leftUTF8(toString(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(e.properties, 'key'), ''), 'null'), '^"|"$', '')), 400), ''), '$$_posthog_breakdown_null_$$'), '$$_posthog_breakdown_null_$$'), 0)), equals(e.event, '$pageview')))
     GROUP BY actor_id) AS source
  ORDER BY source.actor_id ASC
  LIMIT 101
  OFFSET 0 SETTINGS optimize_aggregation_in_order=1,
                    join_algorithm='auto',
                    readonly=2,
                    max_execution_time=60,
                    allow_experimental_object_type=1,
                    max_ast_elements=4000000,
                    max_expanded_ast_elements=4000000,
                    max_bytes_before_external_group_by=0,
                    transform_null_in=1,
                    optimize_min_equality_disjunction_chain_length=4294967295,
                    optimize_rewrite_aggregate_function_with_if=0,
                    optimize_min_inequality_conjunction_chain_length=4294967295,
                    allow_experimental_join_condition=1,
                    use_hive_partitioning=0
  '''
# ---
# name: TestPersonTrends.test_trends_people_endpoint_filters_search[new_events_schema.1]
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT source.actor_id AS actor_id,
         source.event_count AS event_count,
         source.matching_events AS matching_events,
         source.event_distinct_ids AS event_distinct_ids
  FROM
    (SELECT actor_id AS actor_id,
            count() AS event_count,
            groupUniqArray(distinct_id) AS event_distinct_ids,
            groupUniqArray(100)(tuple(timestamp, uuid, `$session_id`, `$window_id`)) AS matching_events,
            max(timestamp) AS last_seen,
            actor_id AS id
     FROM
       (SELECT if(not(empty(e__override.distinct_id)), e__override.person_id, e.person_id) AS actor_id,
               toTimeZone(e.timestamp, 'UTC') AS timestamp,
               e.uuid AS uuid,
               e.`$session_id` AS `$session_id`,
               e.`$window_id` AS `$window_id`,
               e.distinct_id AS distinct_id
        FROM events_json AS e
        LEFT OUTER JOIN
          (SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id,
                  person_distinct_id_overrides.distinct_id AS distinct_id
           FROM person_distinct_id_overrides
           WHERE equals(person_distinct_id_overrides.team_id, 99999)
           GROUP BY person_distinct_id_overrides.distinct_id
           HAVING equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0) SETTINGS optimize_aggregation_in_order=1) AS e__override ON equals(e.distinct_id, e__override.distinct_id)
        LEFT JOIN
          (SELECT person.id AS id,
                  replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, 'email'), ''), 'null'), '^"|"$', '') AS properties___email,
                  replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, 'name'), ''), 'null'), '^"|"$', '') AS properties___name
           FROM person
           WHERE and(equals(person.team_id, 99999), in(tuple(person.id, person.version),
                                                         (SELECT person.id AS id, max(person.version) AS version
                                                          FROM person
                                                          WHERE equals(person.team_id, 99999)
                                                          GROUP BY person.id
                                                          HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))))))) SETTINGS optimize_aggregation_in_order=1) AS e__person ON equals(if(not(empty(e__override.distinct_id)), e__override.person_id, e.person_id), e__person.id)
        WHERE and(equals(e.team_id, 99999), or(ifNull(ilike(toString(e__person.properties___email), '%ben%'), 0), ifNull(ilike(toString(e__person.properties___name), '%ben%'), 0), ifNull(ilike(toString(if(notEquals(toJSONString(e.properties.^distinct_id), '{}'), toJSONString(e.properties.^distinct_id), if(isNull(e.properties.distinct_id), NULL, if(startsWith(dynamicType(e.properties.distinct_id), 'DateTime'), replaceOne(toString(e.properties.distinct_id), ' ', 'T'), toString(e.properties.distinct_id))))), '%ben%'), 0)), greaterOrEquals(timestamp, toDateTime64('explicit_redacted_timestamp', 6, 'UTC')), lessOrEquals(timestamp, toDateTime64('explicit_redacted_timestamp', 6, 'UTC')), or(isNull(if(notEquals(toJSONString(e.properties.^key), '{}'), toJSONString(e.properties.^key), if(isNull(e.properties.key), NULL, if(startsWith(dynamicType(e.properties.key), 'DateTime'), replaceOne(toString(e.properties.key), ' ', 'T'), toString(e.properties.key))))), ifNull(equals(ifNull(nullIf(leftUTF8(toString(if(notEquals(toJSONString(e.properties.^key), '{}'), toJSONString(e.properties.^key), if(isNull(e.properties.key), NULL, if(startsWith(dynamicType(e.properties.key), 'DateTime'), replaceOne(toString(e.properties.key), ' ', 'T'), toString(e.properties.key))))), 400), ''), '$$_posthog_breakdown_null_$$'), '$$_posthog_breakdown_null_$$'), 0)), equals(e.event, '$pageview')))
     GROUP BY actor_id) AS source
  ORDER BY source.actor_id ASC
  LIMIT 101
  OFFSET 0 SETTINGS optimize_aggregation_in_order=1,
                    join_algorithm='auto',
                    readonly=2,
                    max_execution_time=60,
                    allow_experimental_object_type=1,
                    max_ast_elements=4000000,
                    max_expanded_ast_elements=4000000,
                    max_bytes_before_external_group_by=0,
                    transform_null_in=1,
                    optimize_min_equality_disjunction_chain_length=4294967295,
                    optimize_rewrite_aggregate_function_with_if=0,
                    optimize_min_inequality_conjunction_chain_length=4294967295,
                    allow_experimental_join_condition=1,
                    use_hive_partitioning=0
  '''
# ---
# name: TestPersonTrends.test_trends_people_endpoint_filters_search[new_events_schema]
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT source.actor_id AS actor_id,
         source.event_count AS event_count,
         source.matching_events AS matching_events,
         source.event_distinct_ids AS event_distinct_ids
  FROM
    (SELECT actor_id AS actor_id,
            count() AS event_count,
            groupUniqArray(distinct_id) AS event_distinct_ids,
            groupUniqArray(100)(tuple(timestamp, uuid, `$session_id`, `$window_id`)) AS matching_events,
            max(timestamp) AS last_seen,
            actor_id AS id
     FROM
       (SELECT if(not(empty(e__override.distinct_id)), e__override.person_id, e.person_id) AS actor_id,
               toTimeZone(e.timestamp, 'UTC') AS timestamp,
               e.uuid AS uuid,
               e.`$session_id` AS `$session_id`,
               e.`$window_id` AS `$window_id`,
               e.distinct_id AS distinct_id
        FROM events_json AS e
        LEFT OUTER JOIN
          (SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id,
                  person_distinct_id_overrides.distinct_id AS distinct_id
           FROM person_distinct_id_overrides
           WHERE equals(person_distinct_id_overrides.team_id, 99999)
           GROUP BY person_distinct_id_overrides.distinct_id
           HAVING equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0) SETTINGS optimize_aggregation_in_order=1) AS e__override ON equals(e.distinct_id, e__override.distinct_id)
        WHERE and(equals(e.team_id, 99999), greaterOrEquals(timestamp, toDateTime64('explicit_redacted_timestamp', 6, 'UTC')), lessOrEquals(timestamp, toDateTime64('explicit_redacted_timestamp', 6, 'UTC')), or(isNull(if(notEquals(toJSONString(e.properties.^key), '{}'), toJSONString(e.properties.^key), if(isNull(e.properties.key), NULL, if(startsWith(dynamicType(e.properties.key), 'DateTime'), replaceOne(toString(e.properties.key), ' ', 'T'), toString(e.properties.key))))), ifNull(equals(ifNull(nullIf(leftUTF8(toString(if(notEquals(toJSONString(e.properties.^key), '{}'), toJSONString(e.properties.^key), if(isNull(e.properties.key), NULL, if(startsWith(dynamicType(e.properties.key), 'DateTime'), replaceOne(toString(e.properties.key), ' ', 'T'), toString(e.properties.key))))), 400), ''), '$$_posthog_breakdown_null_$$'), '$$_posthog_breakdown_null_$$'), 0)), equals(e.event, '$pageview')))
     GROUP BY actor_id) AS source
  ORDER BY source.actor_id ASC
  LIMIT 101
  OFFSET 0 SETTINGS optimize_aggregation_in_order=1,
                    join_algorithm='auto',
                    readonly=2,
                    max_execution_time=60,
                    allow_experimental_object_type=1,
                    max_ast_elements=4000000,
                    max_expanded_ast_elements=4000000,
                    max_bytes_before_external_group_by=0,
                    transform_null_in=1,
                    optimize_min_equality_disjunction_chain_length=4294967295,
                    optimize_rewrite_aggregate_function_with_if=0,
                    optimize_min_inequality_conjunction_chain_length=4294967295,
                    allow_experimental_join_condition=1,
                    use_hive_partitioning=0
  '''
# ---
# name: TestPersonTrends.test_trends_people_endpoint_includes_recordings
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT source.actor_id AS actor_id,
         source.event_count AS event_count,
         source.matching_events AS matching_events,
         source.event_distinct_ids AS event_distinct_ids
  FROM
    (SELECT actor_id AS actor_id,
            count() AS event_count,
            groupUniqArray(distinct_id) AS event_distinct_ids,
            groupUniqArray(100)(tuple(timestamp, uuid, `$session_id`, `$window_id`)) AS matching_events,
            max(timestamp) AS last_seen,
            actor_id AS id
     FROM
       (SELECT if(not(empty(e__override.distinct_id)), e__override.person_id, e.person_id) AS actor_id,
               toTimeZone(e.timestamp, 'UTC') AS timestamp,
               e.uuid AS uuid,
               e.`$session_id` AS `$session_id`,
               e.`$window_id` AS `$window_id`,
               e.distinct_id AS distinct_id
        FROM events AS e
        LEFT OUTER JOIN
          (SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id,
                  person_distinct_id_overrides.distinct_id AS distinct_id
           FROM person_distinct_id_overrides
           WHERE equals(person_distinct_id_overrides.team_id, 99999)
           GROUP BY person_distinct_id_overrides.distinct_id
           HAVING equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0) SETTINGS optimize_aggregation_in_order=1) AS e__override ON equals(e.distinct_id, e__override.distinct_id)
        WHERE and(equals(e.team_id, 99999), greaterOrEquals(timestamp, toDateTime64('explicit_redacted_timestamp', 6, 'UTC')), lessOrEquals(timestamp, toDateTime64('explicit_redacted_timestamp', 6, 'UTC')), or(isNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(e.properties, 'key'), ''), 'null'), '^"|"$', '')), ifNull(equals(ifNull(nullIf(leftUTF8(toString(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(e.properties, 'key'), ''), 'null'), '^"|"$', '')), 400), ''), '$$_posthog_breakdown_null_$$'), '$$_posthog_breakdown_null_$$'), 0)), equals(e.event, '$pageview')))
     GROUP BY actor_id) AS source
  ORDER BY source.actor_id ASC
  LIMIT 101
  OFFSET 0 SETTINGS optimize_aggregation_in_order=1,
                    join_algorithm='auto',
                    readonly=2,
                    max_execution_time=60,
                    allow_experimental_object_type=1,
                    max_ast_elements=4000000,
                    max_expanded_ast_elements=4000000,
                    max_bytes_before_external_group_by=0,
                    transform_null_in=1,
                    optimize_min_equality_disjunction_chain_length=4294967295,
                    optimize_rewrite_aggregate_function_with_if=0,
                    optimize_min_inequality_conjunction_chain_length=4294967295,
                    allow_experimental_join_condition=1,
                    use_hive_partitioning=0
  '''
# ---
# name: TestPersonTrends.test_trends_people_endpoint_includes_recordings.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT session_id
  FROM session_replay_events
  WHERE team_id = 99999
    AND session_id IN ['s1']
    AND min_first_timestamp >= '2020-01-07 00:00:00'
    AND max_last_timestamp <= '2020-01-13 23:59:59'
  GROUP BY session_id
  HAVING max(is_deleted) = 0
  '''
# ---
# name: TestPersonTrends.test_trends_people_endpoint_includes_recordings[new_events_schema]
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT source.actor_id AS actor_id,
         source.event_count AS event_count,
         source.matching_events AS matching_events,
         source.event_distinct_ids AS event_distinct_ids
  FROM
    (SELECT actor_id AS actor_id,
            count() AS event_count,
            groupUniqArray(distinct_id) AS event_distinct_ids,
            groupUniqArray(100)(tuple(timestamp, uuid, `$session_id`, `$window_id`)) AS matching_events,
            max(timestamp) AS last_seen,
            actor_id AS id
     FROM
       (SELECT if(not(empty(e__override.distinct_id)), e__override.person_id, e.person_id) AS actor_id,
               toTimeZone(e.timestamp, 'UTC') AS timestamp,
               e.uuid AS uuid,
               e.`$session_id` AS `$session_id`,
               e.`$window_id` AS `$window_id`,
               e.distinct_id AS distinct_id
        FROM events_json AS e
        LEFT OUTER JOIN
          (SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id,
                  person_distinct_id_overrides.distinct_id AS distinct_id
           FROM person_distinct_id_overrides
           WHERE equals(person_distinct_id_overrides.team_id, 99999)
           GROUP BY person_distinct_id_overrides.distinct_id
           HAVING equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0) SETTINGS optimize_aggregation_in_order=1) AS e__override ON equals(e.distinct_id, e__override.distinct_id)
        WHERE and(equals(e.team_id, 99999), greaterOrEquals(timestamp, toDateTime64('explicit_redacted_timestamp', 6, 'UTC')), lessOrEquals(timestamp, toDateTime64('explicit_redacted_timestamp', 6, 'UTC')), or(isNull(if(notEquals(toJSONString(e.properties.^key), '{}'), toJSONString(e.properties.^key), if(isNull(e.properties.key), NULL, if(startsWith(dynamicType(e.properties.key), 'DateTime'), replaceOne(toString(e.properties.key), ' ', 'T'), toString(e.properties.key))))), ifNull(equals(ifNull(nullIf(leftUTF8(toString(if(notEquals(toJSONString(e.properties.^key), '{}'), toJSONString(e.properties.^key), if(isNull(e.properties.key), NULL, if(startsWith(dynamicType(e.properties.key), 'DateTime'), replaceOne(toString(e.properties.key), ' ', 'T'), toString(e.properties.key))))), 400), ''), '$$_posthog_breakdown_null_$$'), '$$_posthog_breakdown_null_$$'), 0)), equals(e.event, '$pageview')))
     GROUP BY actor_id) AS source
  ORDER BY source.actor_id ASC
  LIMIT 101
  OFFSET 0 SETTINGS optimize_aggregation_in_order=1,
                    join_algorithm='auto',
                    readonly=2,
                    max_execution_time=60,
                    allow_experimental_object_type=1,
                    max_ast_elements=4000000,
                    max_expanded_ast_elements=4000000,
                    max_bytes_before_external_group_by=0,
                    transform_null_in=1,
                    optimize_min_equality_disjunction_chain_length=4294967295,
                    optimize_rewrite_aggregate_function_with_if=0,
                    optimize_min_inequality_conjunction_chain_length=4294967295,
                    allow_experimental_join_condition=1,
                    use_hive_partitioning=0
  '''
# ---
